force-app/main/default/objects/Reference_HNBF_Policy_Type__c/Reference_HNBF_Policy_Type__c.object-meta.xml
<CustomObject>
    <description>This will house the different apps and carriers for the HNBF onboarding</description>
    <label>Reference HNBF Policy Type</label>
    <nameField>
        <displayFormat>Ref HNBF PolicyType-{00000}</displayFormat>
        <label>Reference HNBF Policy Type</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference HNBF Policy Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>