force-app/main/default/objects/Reference_HNBF_Policy_Type__c/fields/Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Net_Revenue__c</fullName>
    <formula>Reference_HNBF__r.HNBF_Opportunity__r.Amount</formula>
    <label>Net Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>