force-app/main/default/objects/Reference_HNBF_Policy_Type__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>