force-app/main/default/objects/Reference_HNBF_Policy_Type__c/fields/Submitted_to_New_Case__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_New_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted to New Case</label>
    <type>Checkbox</type>
</CustomField>