force-app/main/default/objects/Reference_HNBF_Policy_Type__c/fields/Workorder_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Workorder_Submitted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Workorder Submitted</label>
    <type>Date</type>
</CustomField>