force-app/main/default/objects/Reference_HNBF_Policy_Type__c/validationRules/Admin_Fee_Confirmed.validationRule-meta.xml
<ValidationRule>
    <fullName>Admin_Fee_Confirmed</fullName>
    <active>true</active>
    <description>If Policy Commissionable is no the Admin Fee Confirmed must be populated</description>
    <errorConditionFormula>ISPICKVAL(Policy_Commissionable__c, &quot;No&quot;) &amp;&amp;ISNULL(TEXT( Admin_Fee_Confirmed__c ))</errorConditionFormula>
    <errorMessage>If Policy Commissionable is no, you must enter a value in the Admin Fee Confirmed Field.</errorMessage>
</ValidationRule>