force-app/main/default/objects/Reference_HNBF_Policy_Type__c/validationRules/Commisionable_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Commisionable_date</fullName>
    <active>true</active>
    <description>If Policy Commissionable is yes the Commissionable Date must be populated</description>
    <errorConditionFormula>ISPICKVAL(Policy_Commissionable__c, &quot;Yes&quot;) &amp;&amp;ISNULL(Commissionable_Date__c)</errorConditionFormula>
    <errorMessage>If Policy Commissionable is yes, you must enter a Commissionable Date</errorMessage>
</ValidationRule>