force-app/main/default/objects/Reference_HNBF_Policy_Type__c/validationRules/Commisionable_date_No.validationRule-meta.xml
<ValidationRule>
    <fullName>Commisionable_date_No</fullName>
    <active>true</active>
    <description>If Policy Commissionalbe is no, you cannot have a date in the Commissionable Date field.</description>
    <errorConditionFormula>NOT(ISNULL( Commissionable_Date__c)) &amp;&amp;
ISPICKVAL( Policy_Commissionable__c , &quot;No&quot;)</errorConditionFormula>
    <errorMessage>If Policy Commissionalble is no, you cannot have a date in the Commissionable Date field.</errorMessage>
</ValidationRule>