force-app/main/default/objects/Reference_HNBF_Policy_Type__c/validationRules/Former_Coverage_Cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>Former_Coverage_Cancelled</fullName>
    <active>true</active>
    <description>If Former Coverage Cancelled is yes the Former Coverage Cancellation Sent Date must be populated</description>
    <errorConditionFormula>ISPICKVAL(Former_Coverage_Cancelled__c, &quot;Yes&quot;) &amp;&amp; ISNULL( Former_Coverage_Cancellation_Sent__c)</errorConditionFormula>
    <errorMessage>If you select Yes for Former Coverage Cancelled, you must entere a date in the Former Coverage Cancellation Sent Field.</errorMessage>
</ValidationRule>