force-app/main/default/objects/Reference_HNBF_Policy_Type__c/validationRules/Specialist_cannot_change_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Specialist_cannot_change_fields</fullName>
    <active>true</active>
    <description>If fields already have a value and the user is not an HNBF Admin the value cannot be changed.
AOR Sent to Carrier
Group App Sent to Carrier</description>
    <errorConditionFormula>$User.ProfileId !=&apos;00e70000001FcCE&apos; &amp;&amp; 
(

(
NOT(ISBLANK(PRIORVALUE(AOR_Sent_to_Carrier__c ))) &amp;&amp;  ISCHANGED(AOR_Sent_to_Carrier__c)
)

|| 

(
NOT(ISBLANK(PRIORVALUE(Group_App_Sent_to_Carrier__c))) &amp;&amp;   ISCHANGED(Group_App_Sent_to_Carrier__c)
)
 
)</errorConditionFormula>
    <errorMessage>Specialist cannot change the value of the Group App Sent to Carrier or OAR Sent to Carrier Fields.</errorMessage>
</ValidationRule>